[gd_scene load_steps=6 format=4 uid="uid://c8crrr8mnneks"]

[ext_resource type="Script" uid="uid://ctumvccgx6tl8" path="res://src/game/match.gd" id="1_2xld4"]
[ext_resource type="PackedScene" uid="uid://cv2vaeuigljwt" path="res://scenes/matches/core.tscn" id="2_j5m82"]
[ext_resource type="TileSet" uid="uid://xd0jqo1f7ya4" path="res://assets/resources/terrain_tileset.tres" id="3_2evk0"]
[ext_resource type="Script" uid="uid://cgpanl31l6m4r" path="res://src/game/board/board_tile_map.gd" id="4_jqsit"]
[ext_resource type="Script" uid="uid://bruhbofycekue" path="res://src/standard_tile_map.gd" id="5_uh6xr"]

[node name="Match" type="Node2D"]
process_mode = 1
script = ExtResource("1_2xld4")
match_name = "Islands of Hopelesness"
background_color = Color(0.145098, 0.227451, 0.372549, 1)

[node name="Core" parent="." instance=ExtResource("2_j5m82")]

[node name="Board" type="Node2D" parent="."]

[node name="BoardTileMap" type="TileMapLayer" parent="Board"]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAkAAAAAAAEAAAAKAAkAAAAAAAIAAAAKAAkAAAAAAAMAAAAKAAkAAAAAAAQAAAAKAAkAAAAAAAUAAAAKAAkAAAAAAAYAAAAKAAkAAAAAAAcAAAAKAAkAAAAAAAgAAAAKAAkAAAAAAAkAAAAKAAkAAAAAAAoAAAAKAAkAAAAAAAsAAAAKAAkAAAAAAAwAAAANAAgAAAAAAA0AAAANAAgAAAAAAA4AAAAKAAkAAAAAAA8AAAAKAAkAAAAAABAAAAAKAAkAAAAAABEAAAAKAAkAAAAAABIAAAAKAAkAAAAAABMAAAAKAAkAAAAAABQAAAAKAAkAAAABAAAAAAAKAAkAAAABABQAAAAKAAkAAAACAAAAAAAKAAkAAAACABQAAAAKAAkAAAADAAAAAAAKAAkAAAADABQAAAAKAAkAAAAEAAAAAAAKAAkAAAAEABQAAAAKAAkAAAAFAAAAAAAKAAkAAAAFABQAAAAKAAkAAAAGAAAAAAAKAAkAAAAGABQAAAAKAAkAAAAHAAAAAAAKAAkAAAAHABQAAAAKAAkAAAAIAAAAAAAKAAkAAAAIABQAAAAMAAgAAAAJAAAAAAAKAAkAAAAJABQAAAAKAAkAAAAKAAAAAAAKAAkAAAAKABQAAAAKAAkAAAALAAAAAAAKAAkAAAALABQAAAAKAAkAAAAMAAAAAAAKAAkAAAAMABQAAAAKAAkAAAANAAAAAAAKAAkAAAANABQAAAAKAAkAAAAOAAAAAAAKAAkAAAAOABQAAAAKAAkAAAAPAAAAAAAKAAkAAAAPABQAAAAKAAkAAAAQAAAAAAAKAAkAAAAQABQAAAAKAAkAAAARAAAAAAAKAAkAAAARABQAAAAKAAkAAAASAAAAAAAKAAkAAAASABQAAAAKAAkAAAATAAAAAAAKAAkAAAATABQAAAAKAAkAAAAUAAAAAAAKAAkAAAAUAAEAAAAKAAkAAAAUAAIAAAAKAAkAAAAUAAMAAAAKAAkAAAAUAAQAAAAKAAkAAAAUAAUAAAAKAAkAAAAUAAYAAAAKAAkAAAAUAAcAAAAKAAkAAAAUAAgAAAAKAAkAAAAUAAkAAAAKAAkAAAAUAAoAAAAKAAkAAAAUAAsAAAAKAAkAAAAUAAwAAAAKAAkAAAAUAA0AAAAKAAkAAAAUAA4AAAAKAAkAAAAUAA8AAAAKAAkAAAAUABAAAAAKAAkAAAAUABEAAAANAAgAAAAUABIAAAAKAAkAAAAUABMAAAAKAAkAAAAUABQAAAAKAAkAAAADABIAAAAIAAEAAAADABEAAAAIAAEAAAADABAAAAAIAAEAAAAEABAAAAAIAAEAAAAEABMAAAAMAAEAAAAEABIAAAAMAAEAAAAFABIAAAAMAAEAAAAFABEAAAAMAAEAAAAEABEAAAAMAAEAAAAFABAAAAAMAAIAAAAFAA8AAAAMAAIAAAAEAA8AAAAMAAIAAAAEAA4AAAAIAAcAAAAEAA0AAAAIAAcAAAAFAA0AAAAIAAcAAAAFAAwAAAAIAAcAAAAFAAsAAAAIAAcAAAAFAAoAAAAIAAcAAAAFAAkAAAAKAAUAAAAEAAkAAAAKAAUAAAAEAAgAAAAEAAUAAAADAAgAAAAKAAUAAAADAAcAAAAKAAUAAAADAAYAAAAKAAUAAAAEAAYAAAAKAAUAAAAEAAcAAAAEAAUAAAAFAAgAAAAMAAUAAAAFAAcAAAAEAAUAAAAFAAYAAAAMAAUAAAAGAAYAAAAIAAUAAAAGAAcAAAAMAAUAAAAGAAgAAAAMAAUAAAAEAAUAAAAIAAUAAAAFAAUAAAAIAAUAAAAGAAUAAAAIAAUAAAAHAAYAAAAIAAUAAAAGABEAAAAIAAcAAAAHABEAAAAIAAcAAAAIABEAAAAIAAcAAAANABIAAAAGAAcAAAAMABIAAAAGAAcAAAAMABEAAAAGAAcAAAALABEAAAAGAAcAAAALABAAAAAGAAcAAAAMABAAAAAGAAcAAAANABAAAAAGAAcAAAANABEAAAAHAAcAAAAOABEAAAAHAAcAAAAOABAAAAAGAAcAAAAOAA8AAAAGAAcAAAAOABIAAAAGAAIAAAAPABIAAAAGAAIAAAAPABEAAAAGAAIAAAAPABAAAAAGAAIAAAAQABIAAAAMAAEAAAAQABEAAAAMAAEAAAAQABAAAAAMAAEAAAAPAA8AAAAMAAEAAAAJABEAAAAIAAcAAAAKABEAAAAIAAcAAAAPAA4AAAAIAAcAAAAPAA0AAAAIAAcAAAAPAAwAAAAIAAcAAAAOAAwAAAAIAAcAAAAOAAsAAAAIAAcAAAAOAAoAAAAIAAcAAAAOAAkAAAAIAAcAAAAOAAgAAAAIAAcAAAANAAwAAAAIAAcAAAAMAAwAAAAIAAcAAAAMAAsAAAAIAAcAAAALAAsAAAAIAAcAAAAKAAsAAAAKAAIAAAAKAAwAAAAKAAIAAAAKAA0AAAAKAAIAAAAJAAsAAAAKAAIAAAAJAAwAAAAIAAUAAAAKAAoAAAANAAIAAAALAAoAAAAMAAIAAAALAAkAAAAMAAIAAAAKAAkAAAANAAIAAAAJAAkAAAANAAIAAAAIAAwAAAAIAAUAAAAJAA0AAAAIAAUAAAAJAAoAAAAIAAUAAAAIAAkAAAAIAAcAAAAHAAkAAAAIAAcAAAAGAAkAAAAIAAcAAAAHAAUAAAAIAAcAAAAIAAUAAAAIAAcAAAAJAAUAAAAIAAcAAAAKAAUAAAAIAAcAAAAKAAYAAAAIAAcAAAALAAYAAAAIAAcAAAAMAAcAAAAEAAUAAAANAAcAAAAKAAAAAAANAAYAAAAKAAAAAAANAAUAAAAEAAUAAAAMAAUAAAAEAAUAAAAMAAYAAAAEAAUAAAAMAAQAAAAEAAUAAAAOAAcAAAAFAAUAAAAOAAYAAAAAAAUAAAAPAAYAAAAAAAUAAAAPAAcAAAAAAAUAAAAPAAUAAAAAAAUAAAAPAAQAAAAAAAUAAAAOAAQAAAAAAAUAAAANAAQAAAAAAAUAAAAOAAUAAAAAAAUAAAAQAAQAAAAAAAUAAAANAAIAAAAAAAUAAAAOAAMAAAAAAAUAAAABAA8AAAAKAAkAAAABAA4AAAAKAAkAAAABAAIAAAAKAAkAAAABAAEAAAAKAAkAAAACAAEAAAAKAAkAAAADAAEAAAAKAAkAAAAEAAEAAAAKAAkAAAAFAAEAAAAKAAkAAAAFAAIAAAALAAgAAAAHAAEAAAAKAAkAAAAIAAEAAAAKAAkAAAAJAAEAAAAKAAkAAAALAAEAAAAKAAkAAAAMAAEAAAAKAAkAAAANAAEAAAAKAAkAAAAOAAEAAAAKAAkAAAAPAAEAAAAKAAkAAAAQAAEAAAAKAAkAAAARAAEAAAAKAAkAAAATAAEAAAAKAAkAAAATAA0AAAAGAAcAAAATAA4AAAAKAAkAAAABAAMAAAAKAAkAAAABAAQAAAAKAAkAAAABAAUAAAAKAAkAAAABAAYAAAAKAAkAAAABAAcAAAAKAAkAAAABAAgAAAAKAAkAAAABAAkAAAANAAgAAAABAAoAAAAKAAkAAAABAAsAAAAKAAkAAAABAAwAAAAKAAkAAAABAA0AAAANAAgAAAABABAAAAAKAAkAAAABABEAAAAKAAkAAAABABIAAAAKAAkAAAABABMAAAAKAAkAAAACAAIAAAAMAAgAAAACAAMAAAAKAAkAAAACAAQAAAAKAAkAAAACAAUAAAAKAAkAAAACAAYAAAAKAAkAAAACAAcAAAAKAAkAAAACAAgAAAAKAAkAAAACAAkAAAAKAAkAAAACAAoAAAANAAgAAAACAAsAAAAKAAkAAAACAAwAAAAKAAkAAAACAA0AAAAKAAkAAAACAA4AAAAKAAkAAAACAA8AAAAKAAkAAAACABAAAAAKAAkAAAACABEAAAAKAAkAAAACABIAAAAKAAkAAAACABMAAAAKAAkAAAADAAIAAAAMAAgAAAADAAMAAAAKAAkAAAAEAAIAAAAMAAgAAAAEAAMAAAAKAAkAAAAFAAMAAAAKAAkAAAAGAAEAAAAKAAkAAAAGAAIAAAAKAAkAAAAGAAMAAAAKAAkAAAAHAAIAAAAKAAkAAAAHAAMAAAAKAAkAAAAIAAIAAAAKAAkAAAAIAAMAAAAKAAkAAAAJAAIAAAANAAgAAAAJAAMAAAAKAAkAAAAKAAEAAAAKAAkAAAAKAAIAAAAKAAkAAAAKAAMAAAAKAAkAAAALAAIAAAAKAAkAAAALAAMAAAAKAAkAAAAMAAIAAAAKAAkAAAAMAAMAAAAKAAkAAAANAAMAAAAKAAUAAAAOAAIAAAAKAAkAAAAPAAIAAAAKAAkAAAAQAAIAAAAKAAkAAAARAAIAAAAKAAkAAAASAAIAAAAKAAkAAAASAAEAAAAKAAkAAAATAAIAAAAKAAkAAAATAAMAAAAKAAkAAAATAAUAAAALAAgAAAATAAQAAAAMAAgAAAASAAQAAAAKAAkAAAASAAMAAAAKAAkAAAARAAMAAAAKAAkAAAAQAAMAAAAKAAkAAAAPAAMAAAAKAAkAAAARAAQAAAAKAAkAAAASAAUAAAAKAAkAAAASAAYAAAAMAAgAAAARAAYAAAAKAAkAAAARAAUAAAAKAAkAAAAQAAUAAAAKAAkAAAAQAAYAAAAKAAkAAAARAAcAAAAKAAkAAAASAAcAAAAKAAkAAAATAAcAAAAKAAkAAAATAAgAAAAKAAkAAAATAAkAAAAKAAkAAAASAAkAAAAKAAkAAAASAAgAAAAKAAkAAAARAAgAAAAKAAkAAAAQAAcAAAAKAAkAAAATAAYAAAALAAgAAAASAAoAAAAKAAUAAAARAAoAAAAKAAkAAAARAAkAAAAKAAkAAAAQAAkAAAAKAAkAAAAPAAkAAAAKAAkAAAAQAAgAAAAKAAkAAAAPAAgAAAAKAAkAAAAPAAoAAAAKAAkAAAAPAAsAAAAKAAkAAAAQAAsAAAAKAAUAAAARAAsAAAAIAAUAAAAQAAoAAAAKAAUAAAASAAsAAAAIAAUAAAASAAwAAAAGAAcAAAATAAwAAAAGAAcAAAATAAsAAAAKAAUAAAATAAoAAAAKAAUAAAASAA0AAAAGAAcAAAASAA4AAAAKAAcAAAARAA4AAAAKAAcAAAARAA0AAAAIAAUAAAARAAwAAAAIAAUAAAAQAAwAAAAIAAUAAAAQAA0AAAAKAAkAAAAQAA4AAAAKAAkAAAARAA8AAAAKAAkAAAASAA8AAAAKAAkAAAATAA8AAAAKAAkAAAATABAAAAAKAAkAAAATABEAAAAKAAkAAAATABIAAAAKAAkAAAATABMAAAANAAgAAAASABMAAAAKAAkAAAASABIAAAAKAAkAAAARABIAAAAKAAkAAAASABEAAAAKAAkAAAASABAAAAAKAAkAAAARABEAAAAKAAkAAAARABAAAAAKAAkAAAAQAA8AAAAKAAkAAAARABMAAAAKAAkAAAAQABMAAAAKAAkAAAAPABMAAAAKAAkAAAAOABMAAAAKAAkAAAANABMAAAAKAAkAAAAMABMAAAAKAAkAAAALABMAAAAKAAkAAAAKABMAAAAKAAkAAAAJABMAAAAKAAkAAAAIABMAAAAKAAkAAAAFABMAAAAKAAkAAAAGABMAAAAKAAkAAAAHABMAAAAKAAkAAAADABMAAAAKAAkAAAAGABIAAAAKAAkAAAAHABIAAAAKAAkAAAAIABIAAAAKAAkAAAAJABIAAAAKAAkAAAAKABIAAAAKAAkAAAALABIAAAAKAAkAAAAGABAAAAAKAAkAAAAGAA8AAAAKAAkAAAAHAA8AAAAKAAkAAAAGAA4AAAAKAAkAAAAFAA4AAAAKAAkAAAAGAA0AAAAKAAkAAAAHAA0AAAAKAAkAAAAHAAwAAAAKAAkAAAAHAAsAAAAKAAkAAAAGAAsAAAAKAAkAAAAGAAoAAAAKAAkAAAAHAAoAAAAKAAkAAAAIAAoAAAAKAAkAAAAIAAsAAAAKAAkAAAAGAAwAAAAKAAkAAAAIABAAAAAKAAkAAAAHABAAAAAKAAkAAAAIAA8AAAAKAAkAAAAIAA4AAAAKAAkAAAAHAA4AAAAKAAkAAAAIAA0AAAAKAAkAAAAJAA4AAAAKAAkAAAAJAA8AAAAKAAkAAAAJABAAAAAKAAkAAAAKAA8AAAAKAAkAAAAKAA4AAAAKAAkAAAAKABAAAAAKAAkAAAALAA8AAAAKAAkAAAALAA4AAAAKAAkAAAALAA0AAAAKAAkAAAALAAwAAAAKAAkAAAAMAA0AAAAKAAkAAAAMAA4AAAAKAAkAAAAMAA8AAAAKAAkAAAANAA8AAAAKAAkAAAANAA4AAAAKAAkAAAANAA0AAAAKAAkAAAAOAA0AAAAKAAkAAAAOAA4AAAAKAAkAAAAMAAoAAAAKAAkAAAAMAAkAAAAKAAkAAAAMAAgAAAAKAAkAAAANAAkAAAAKAAkAAAANAAoAAAAKAAkAAAANAAsAAAAKAAkAAAANAAgAAAAKAAkAAAAHAAgAAAAKAAkAAAAHAAcAAAAKAAkAAAAIAAcAAAAKAAkAAAAIAAgAAAAKAAkAAAAJAAgAAAAKAAkAAAAJAAcAAAAKAAkAAAAJAAYAAAAKAAkAAAAKAAcAAAAKAAkAAAAKAAgAAAAKAAkAAAALAAgAAAAKAAkAAAALAAcAAAAKAAkAAAALAAUAAAAKAAkAAAALAAQAAAAKAAkAAAAKAAQAAAAKAAkAAAAJAAQAAAAKAAkAAAAIAAQAAAAKAAkAAAAHAAQAAAAKAAkAAAAGAAQAAAAKAAkAAAAFAAQAAAAKAAkAAAAEAAQAAAAKAAkAAAADAAQAAAAKAAkAAAADAAUAAAAKAAkAAAADAAkAAAAKAAkAAAADAAoAAAAKAAkAAAADAAsAAAAKAAkAAAAEAAsAAAAKAAkAAAADAAwAAAAKAAkAAAADAA0AAAAKAAkAAAADAA4AAAAKAAkAAAADAA8AAAAKAAkAAAAEAAwAAAAKAAkAAAAEAAoAAAAKAAkAAAAIAAYAAAAKAAkAAAA=")
tile_set = ExtResource("3_2evk0")
script = ExtResource("4_jqsit")

[node name="ObstacleTileMap" type="TileMapLayer" parent="Board/BoardTileMap"]
tile_map_data = PackedByteArray("AAAOABIAAAALAAcAAAAPABAAAAAEAAcAAAAQABIAAAAEAAcAAAADABAAAAAFAAcAAAASAAYAAAAGAAgAAAAMAAQAAAAJAAYAAAAOAAQAAAALAAYAAAADAAgAAAALAAYAAAAQAAsAAAAKAAYAAAAIAAwAAAAKAAYAAAAEAAUAAAAHAAYAAAAEABMAAAALAAcAAAANAAIAAQAJAAEAAAADAAYAAQAJAAEAAAAFAAUAAQAFAAEAAAA=")
tile_set = ExtResource("3_2evk0")
script = ExtResource("5_uh6xr")

[node name="PlayerA" type="TileMapLayer" parent="Board/BoardTileMap"]
modulate = Color(0.1, 0.85, 1, 0.235294)
z_index = 128
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAADABIAAAAHAAYAAAADABEAAAAHAAYAAAAEABIAAAAHAAYAAAAFABIAAAAHAAYAAAAFABEAAAAHAAYAAAAEABEAAAAHAAYAAAAEABAAAAAHAAYAAAAEAA8AAAAHAAYAAAAFAA8AAAAHAAYAAAAFABAAAAAHAAYAAAALABEAAAAHAAYAAAALABAAAAAHAAYAAAAMABEAAAAHAAYAAAAMABIAAAAHAAYAAAAMABAAAAAHAAYAAAANABAAAAAHAAYAAAANABEAAAAHAAYAAAANABIAAAAHAAYAAAAOABAAAAAHAAYAAAAOABEAAAAHAAYAAAAPABIAAAAHAAYAAAAPABEAAAAHAAYAAAAQABEAAAAHAAYAAAAQABAAAAAHAAYAAAAPAA8AAAAHAAYAAAAOAA8AAAAHAAYAAAA=")
tile_set = ExtResource("3_2evk0")
occlusion_enabled = false
metadata/Team = "A"

[node name="PlayerB" type="TileMapLayer" parent="Board/BoardTileMap"]
modulate = Color(1, 0.1, 0.34, 0.235294)
z_index = 128
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAAEAAkAAAAHAAYAAAAEAAgAAAAHAAYAAAADAAgAAAAHAAYAAAADAAcAAAAHAAYAAAADAAYAAAAHAAYAAAAEAAYAAAAHAAYAAAAFAAYAAAAHAAYAAAAEAAUAAAAHAAYAAAAFAAUAAAAHAAYAAAAGAAUAAAAHAAYAAAAGAAYAAAAHAAYAAAAHAAYAAAAHAAYAAAAHAAcAAAAHAAYAAAAGAAcAAAAHAAYAAAAGAAgAAAAHAAYAAAAFAAgAAAAHAAYAAAAFAAcAAAAHAAYAAAAFAAkAAAAHAAYAAAAMAAcAAAAHAAYAAAAMAAYAAAAHAAYAAAAMAAUAAAAHAAYAAAAMAAQAAAAHAAYAAAANAAQAAAAHAAYAAAANAAMAAAAHAAYAAAANAAIAAAAHAAYAAAAOAAMAAAAHAAYAAAAOAAQAAAAHAAYAAAANAAUAAAAHAAYAAAAOAAUAAAAHAAYAAAAOAAYAAAAHAAYAAAAOAAcAAAAHAAYAAAAPAAcAAAAHAAYAAAAPAAYAAAAHAAYAAAAPAAUAAAAHAAYAAAAPAAQAAAAHAAYAAAAQAAQAAAAHAAYAAAA=")
tile_set = ExtResource("3_2evk0")
occlusion_enabled = false
metadata/Team = "B"
